    Reimplemented PacketReader/PacketWriter support into MySqlStream* classes
    Embedded server is now working (libmysqld.dll)
	Added internal implemention of SHA1 so we don't have to distribute the OpenNetCF on mobile devices    	
    Added usage advisor warnings for requesting column values by the wrong type
    Reworked connection string classes to be simpler and faster
    	
8-24-05 - Version 1.0.5

	Bugs fixed or addressed
	-------------------------
	Bug #8667  	OUT parameters are not being valued [fixed]
	Bug #8574  	MySQLCommandBuilder unable to support inline functions [fixed]
	Bug #8509  	MySqlDataAdapter.FillSchema does not interpret unsigned integer	[fixed]
	Bug #8630  	Executing a query with the SchemaOnly option reads the entire resultset	[fixed]
	Bug #7398  	MySqlParameterCollection doesn't allow parameters without filled in names [fixed]
	Bug #7623  	Adding MySqlParameter causes error if MySqlDbType is Decimal [fixed]
	Bug #8929  	Timestamp values with a date > 10/29/9997 cause problems [fixed]
	Bug #9237  	MySqlDataReader.AffectedRecords not set to -1 [fixed]
	Bug #9262  	Floating point numbers boundary conditions (MinValue/MaxValue)
				(added code but really this isn't a bug)
	Bug #7951   Error reading a timestamp column 				
	Bug #10644  Cannot call a stored function directly from Connector/Net 	
	Bug #9722   Connector does not recognize parameters separated by a linefeed 
	Bug #10281  Clone issue with MySqlConnection 
	Bug #11450  Connector/Net, current database and stored procedures
	BugÂ #11490  certain incorrect queries trigger connection must be valid and open message
	Bug #8228  	turkish character set causing the error [fixed]
	Bug #8387  	Connecting with NAMES and character_set_results can be up to 18 times slower.
				Improved this by only issuing a SET NAMES if character_set_client or 
				character_set_connection is different than what we are wanting.