@@ -9,6 +9,8 @@
 	Added internal implemention of SHA1 so we don't have to distribute the OpenNetCF on mobile devices    	
     Added usage advisor warnings for requesting column values by the wrong type
     Reworked connection string classes to be simpler and faster
+    Added cache for stored procedure definitions
+    Added perfmon hooks for stored procedure cache hits and misses    	
     	
 8-24-05 - Version 1.0.5
 
